--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
     "server": "concurrently \"npm run watch\" \"npm run dev\"",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express.js": "^1.0.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13"
